fixed errors in text excercise for present perfect

--- a/french/pages/exercise_presentperfect.html
+++ b/french/pages/exercise_presentperfect.html
@@ -226,9 +226,9 @@
                     </li>
 
                     <li>
-                        Vous (<b title="avez pleuré">pleurer</b>)
-                        <input type="text" pattern="avez pleuré">
-                        beaucoup. Pourquoi ?
+                        Vous (<b title="avez beaucoup pleuré">pleurer beaucoup</b>)
+                        <input type="text" pattern="avez beaucoup pleuré">
+                        . Pourquoi ?
                     </li>
 
                     <li>
@@ -266,8 +266,8 @@
                     </li>
 
                     <li>
-                        Tu (<b title="as pensé">penser</b>)
-                        <input type="text" pattern="as pensé">
+                        Tu (<b title="as toujours pensé">penser toujours</b>)
+                        <input type="text" pattern="as toujours pensé">
                         à ton amoureux.
                     </li>
 
@@ -324,7 +324,7 @@
                     <li>
                         Quand (<b title="j'ai eu">je avoir</b>)
                         <input type="text" pattern="j'ai eu">
-                        deux ans, je (<b title="j'ai appris">apprendre</b>)
+                        deux ans, (<b title="j'ai appris">je apprendre</b>)
                         <input type="text" pattern="j'ai appris">
                         à marcher.
                     </li>
@@ -338,8 +338,8 @@
                     <li>
                         Ils (<b title="ont fait">faire</b>)
                         <input type="text" pattern="ont fait">
-                        à manger et ils (<b title="ont nettoyé">nettoyer</b>)
-                        <input type="text" pattern="ont nettoyé">
+                        à manger et ils (<b title="ont toujours nettoyé">nettoyer toujours</b>)
+                        <input type="text" pattern="ont toujours nettoyé">
                         la cuisine.
                     </li>
                 </ol>
