text excercise for concordance of imperfect and present perfect

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -116,6 +116,296 @@
                         </p>
                     </li>
 
+                    <li>
+                        Complétez le texte qui suit en conjuguant les verbes au passé composé ou à l’imparfait.
+
+                        <h4>Une soirée de magasinage entre filles</h4>
+
+                        <p>
+                            La semaine dernière, mon amie Lucie et moi, nous (<b title="sommes allées">aller</b>)
+                            <input type="text" pattern="sommes allées">
+
+                            magasiner au centre commercial.
+
+                            (<b title="C'était">Ce être</b>)
+                            <input type="text" pattern="C'était">
+
+                            un jour de congé pour la plupart des gens et il y (<b title="avait">avoir</b>)
+                            <input type="text" pattern="avait">
+
+                            beaucoup de monde dans les magasins. Lucie (<b title="cherchait">chercher</b>)
+                            <input type="text" pattern="cherchait">
+
+                            une paire de souliers qui irait avec sa petite robe noire. Nous (<b
+                                title="avons fait">faire</b>)
+                            <input type="text" pattern="avons fait">
+
+                            plusieurs boutiques, elle (<b title="a essayé">essayer</b>)
+                            <input type="text" pattern="a essayé">
+
+                            de nombreuses paires de chaussures, mais aucune ne (<b title="faisait">faire</b>)
+                            <input type="text" pattern="faisait">
+
+                            l’affaire. Certaines (<b title="étaient">être</b>)
+                            <input type="text" pattern="étaient">
+
+                            trop grandes, d’autres (<b title="étaient">être</b>)
+                            <input type="text" pattern="étaient">
+
+                            trop petite, trop noires, pas assez noires, etc.
+                            Quatre heures plus tard, fatiguées, nous (<b title="avons décidé">décider</b>)
+                            <input type="text" pattern="avons décidé">
+
+                            de nous reposer un peu et nous (<b title="avons pris">prendre</b>)
+                            <input type="text" pattern="avons pris">
+
+                            un repas à un petit café avant de recommencer le magasinage. Nous (<b
+                                title="commencions">commencer</b>)
+                            <input type="text" pattern="commencions">
+
+                            réellement à penser que les souliers parfaits (<b title="n'existaient">ne exister</b>)
+                            <input type="text" pattern="n'existaient">
+
+                            pas ! Mais nous (<b title="avons repris">reprendre</b>)
+                            <input type="text" pattern="avons repris">
+
+                            la course des magasins et, tout à coup, dans le dernier magasin de chaussures du centre
+                            commercial dans lequel nous (<b title="sommes entrées">entrer</b>)
+                            <input type="text" pattern="sommes entrées">
+
+                            , Lucie (<b title="a trouvé">trouver</b>)
+                            <input type="text" pattern="a trouvé">
+
+                            les petits souliers qui lui (<b title="plaisaient">plaire</b>)
+                            <input type="text" pattern="plaisaient">
+
+                            . Elle les (<b title="a achetés">acheter</b>)
+                            <input type="text" pattern="a achetés">
+
+                            aussitôt et nous (<b title="sommes parties">partir</b>)
+                            <input type="text" pattern="sommes parties">
+
+                            sans tarder, car l’heure de fermeture des magasins (<b title="approchait">approcher</b>)
+                            <input type="text" pattern="ressemblait">
+
+                            . Quelle journée !
+                        </p>
+                    </li>
+
+                    <li>
+                        Complétez le texte qui suit en conjuguant les verbes au passé composé ou à l’imparfait.
+
+                        <h4>Le courrier du cœur</h4>
+
+                        <p>
+                            Bonjour,
+                            Je vous écris parce que je ne sais plus quoi faire et j’ai besoin de vos conseils.
+
+                            Il y a deux semaines, je (<b title="suis allé">aller</b>)
+                            <input type="text" pattern="suis allé">
+
+                            au cinéma.
+
+                            Presque tous les sièges de la salle (<b title="étaient">être</b>)
+                            <input type="text" pattern="étaient">
+
+                            occupés, alors j’en (<b title="ai pris">prendre</b>)
+                            <input type="text" pattern="ai pris">
+
+                            un à l’arrière et je (<b title="me suis assis">s’asseoir</b>)
+                            <input type="text" pattern="me suis assis">
+                            .
+
+                            Après quelques minutes, une jolie fille (<b title="est venue">venir</b>)
+                            <input type="text" pattern="est venue">
+
+                            s’asseoir juste à côté de moi, mais je (<b title="ne lui ai pas parlé">ne pas lui
+                                parler</b>)
+                            <input type="text" pattern="ne lui ai pas parlé">
+                            .
+
+                            (<b title="J'étais">Je être</b>)
+                            <input type="text" pattern="J|j'étais">
+                            trop timide pour faire cela.
+
+                            Comme le film (<b title="était">être</b>)
+                            <input type="text" pattern="était">
+                            triste, (<b title="j'ai vu">je voir</b>)
+                            <input type="text" pattern="j'ai vu">
+                            qu’elle (<b title="a pleuré">pleurer</b>)
+                            <input type="text" pattern="a pleuré">
+                            sans arrêt tout le long du film.
+
+                            Aucune fois, elle (<b title="m'a regardé">me regarder</b>)
+                            <input type="text" pattern="m'a regardé">
+
+                            et, à la fin de la représentation, elle (<b title="s'est levée">se lever</b>)
+                            <input type="text" pattern="s'est levée">
+                            et elle (<b title="est partie">partir</b>)
+                            <input type="text" pattern="est partie">
+                            sans dire un mot.
+
+                            Hier, je (<b title="suis retourné">retourner</b>)
+                            <input type="text" pattern="suis retourné">
+                            à ce même cinéma.
+
+                            (<b title="J'espérais">Je espérer</b>)
+                            <input type="text" pattern="J|j'espérais">
+                            revoir cette fille.
+
+                            Je (<b title="voulais">vouloir</b>)
+                            <input type="text" pattern="voulais">
+                            lui demander son nom et son numéro de téléphone,
+                            mais je (<b title="ne l'ai pas aperçue">ne pas la apercevoir</b>)
+                            <input type="text" pattern="ne l'ai pas aperçue">
+                            .
+
+                            Pourtant, la salle (<b title="était">être</b>)
+                            <input type="text" pattern="était">
+                            presque vide.
+
+                            Le film d’action qui (<b title="passait">passer</b>)
+                            <input type="text" pattern="passait">
+                            (<b title="n'était pas">ne pas être</b>)
+                            <input type="text" pattern="n'était pas">
+                            de grande qualité et les spectateurs (<b title="riaient">rire</b>)
+                            <input type="text" pattern="riaient">
+                            continuellement.
+
+                            À la sortie du cinéma, (<b title="j'ai attendu">je attendre</b>)
+                            <input type="text" pattern="j'ai attendu">
+                            l’autobus.
+
+                            (<b title="J'étais">Je être</b>)
+                            <input type="text" pattern="J|j'étais">
+                            seul et (<b title="j'avais">je avoir</b>)
+                            <input type="text" pattern="j'avais">
+                            froid.
+
+                            Soudain, (<b title="j'ai reconnu">je reconnaître</b>)
+                            <input type="text" pattern="j'ai reconnu">
+                            cette fille qui (<b title="marchait">marcher</b>)
+                            <input type="text" pattern="marchait">
+                            dans ma direction.
+
+                            Nous (<b title="nous sommes regardés">se regarder</b>)
+                            <input type="text" pattern="nous sommes regardés">
+                            , mais, encore cette fois, (<b title="j'ai été / j'étais">je être</b>)
+                            <input type="text" pattern="j'ai été|j'étais">
+                            trop timide et je (<b title="n'ai pas osé">ne pas oser</b>)
+                            <input type="text" pattern="n'ai pas osé">
+                            lui parler.
+
+                            Que devrais-je faire ?
+
+                            Dois-je retourner à ce cinéma dans l’espoir de la revoir ?
+
+                            Aidez-moi, j’ai hâte de vous lire.
+                        </p>
+                    </li>
+
+                    <li>
+                        Complétez le texte qui suit en conjuguant les verbes au passé composé ou à l’imparfait.
+
+                        <h4>Une journée de ski</h4>
+
+                        <p>
+                            L’hiver dernier, mes amies et moi, nous (<b title="avons décidé">décider</b>)
+                            <input type="text" pattern="avons décidé">
+                            d’aller faire du ski.
+
+                            Nous (<b title="sommes parties">partir</b>)
+                            <input type="text" pattern="sommes parties">
+                            très tôt un dimanche matin.
+
+                            Mon amie Sophie nous (<b title="a conduites">conduire</b>)
+                            <input type="text" pattern="a conduites">
+                            jusqu’à la station de ski où nous (<b title="avons acheté">acheter</b>)
+                            <input type="text" pattern="avons acheté">
+                            une passe pour la journée.
+
+                            (<b title="C'était">Ce être</b>)
+                            <input type="text" pattern="C|c'était">
+                            une journée froide, mais très belle.
+
+                            D’abord, (<b title="j'ai chaussé">je chausser</b>)
+                            <input type="text" pattern="j'ai chaussé">
+                            les skis et je (<b title="suis montée">monter</b>)
+                            <input type="text" pattern="suis montée">
+                            dans le monte-pente.
+
+                            Comme je ne pas (<b title="pratiquais"></b>pratiquer
+                            <input type="text" pattern="pratiquais">
+                            cette activité très souvent, je (<b title="j'avais / j'ai eu">avoir</b>)
+                            <input type="text" pattern="j'avais|j'ai eu">
+                            un peu peur.
+
+                            Mais un moniteur qui (<b title="était">être</b>)
+                            <input type="text" pattern="était">
+                            là, me (<b title="m'a aidée">aider</b>)
+                            <input type="text" pattern="m'a aidée">
+                            les premières minutes.
+
+                            Il (<b title="m'a rappelé">me rappeler</b>)
+                            <input type="text" pattern="m'a rappelé">
+                            les consignes de base et les pentes qui
+                            (<b title="étaient">être</b>)
+                            <input type="text" pattern="étaient">
+                            les plus difficiles. La première descente
+                            (<b title="s'est bien passée">se passer bien</b>)
+                            <input type="text" pattern="s'est bien passée">
+                            parce que (<b title="je prenais / j'ai pris">je prendre</b>)
+                            <input type="text" pattern="prenais|j'ai pris">
+                            mon temps.
+
+                            Après quelques descentes, je (<b title="me suis sentie">se sentir</b>)
+                            <input type="text" pattern="me suis sentie">
+                            fatiguée et (<b title="j'ai décidé">je décider</b>)
+                            <input type="text" pattern="j'ai décidé">
+                            de me rendre au chalet pour boire un chocolat chaud.
+
+                            Il y (<b title="avait">avoir</b>)
+                            <input type="text" pattern="avait">
+                            beaucoup de gens à cet endroit.
+
+                            Plusieurs personnes (<b title="prenaient">prendre</b>)
+                            <input type="text" pattern="prenaient">
+                            du soleil sur la terrasse, d’autres
+                            (<b title="buvaient">boire</b>)
+                            <input type="text" pattern="buvaient">
+                            un café ou autre chose au bar et tout le monde
+                            (<b title="semblait">sembler</b>)
+                            <input type="text" pattern="semblait">
+                            bien s’amuser.
+
+                            Quand (<b title="j'ai fini">je finir</b>)
+                            <input type="text" pattern="j'ai fini">
+                            de me reposer, je (<b title="suis retournée">retourner</b>)
+                            <input type="text" pattern="suis retournée">
+                            faire quelques autres descentes.
+
+                            Déjà, la fin de l’après-midi (<b title="approchait">approcher</b>)
+                            <input type="text" pattern="approchait">
+                            et mes amies (<b title="m'ont dit">me dire</b>)
+                            <input type="text" pattern="m'ont dit">
+                            qu’il (<b title="était"></b>être
+                            <input type="text" pattern="était">
+                            temps de revenir à la maison.
+
+                            Nous (<b title="avons donc enlevé">enlever donc</b>)
+                            <input type="text" pattern="avons donc enlevé">
+                            nos skis, nous (<b title="sommes montées">monter</b>)
+                            <input type="text" pattern="sommes montées">
+                            dans la voiture et Sophie n'ous
+                            (<b title="a reconduites">reconduire</b>)
+                            <input type="text" pattern="a reconduites">
+                            chacune chez soi.
+
+                            (<b title="J|j'ai passé">Je passer</b>)
+                            <input type="text" pattern="J|j'ai passé">
+                            une très belle journée et j’espère qu’on y retournera bientôt.
+                        </p>
+                    </li>
 
             </section>
 
