--- a/french/pages/exercise_presentperfect.html
+++ b/french/pages/exercise_presentperfect.html
@@ -227,7 +227,7 @@
 
                     <li>
                         Vous (<b title="avez beaucoup pleuré">pleurer beaucoup</b>)
-                        <input type="text" pattern="avez beaucoup pleuré">
+                        <input type="text" class="extra-wide" pattern="avez beaucoup pleuré">
                         . Pourquoi ?
                     </li>
 
@@ -267,7 +267,7 @@
 
                     <li>
                         Tu (<b title="as toujours pensé">penser toujours</b>)
-                        <input type="text" pattern="as toujours pensé">
+                        <input type="text" class="wide" pattern="as toujours pensé">
                         à ton amoureux.
                     </li>
 
@@ -339,7 +339,7 @@
                         Ils (<b title="ont fait">faire</b>)
                         <input type="text" pattern="ont fait">
                         à manger et ils (<b title="ont toujours nettoyé">nettoyer toujours</b>)
-                        <input type="text" pattern="ont toujours nettoyé">
+                        <input type="text" class="wide" pattern="ont toujours nettoyé">
                         la cuisine.
                     </li>
                 </ol>
