added spellcheck=false to all pages

--- a/french/french_conjugations.html
+++ b/french/french_conjugations.html
@@ -30,7 +30,7 @@
 
 
 <body>
-    <main>
+    <main spellcheck="false">
         <article class="verb-list">
             <header>
                 <h3 id="page-title">Temps de conjugaison</h3>
