--- a/french/french_conjugations_mixed.html
+++ b/french/french_conjugations_mixed.html
@@ -31,7 +31,7 @@
 
 
 <body>
-    <main>
+    <main spellcheck="false">
         <article class="verb-list-mixed-tenses">
             <header>
                 <h3 id="page-title">Temps de conjugaison</h3>
