--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <main>
+    <main spellcheck="false">
         <article class="text">
             <h2>Le conditionnel présent</h2>
             <h3>Exercices de conjugaison</h3>
