fine-tuned text for verb concordance

--- a/french/pages/exercise_concordance.html
+++ b/french/pages/exercise_concordance.html
@@ -27,16 +27,17 @@
                         <h4>Un hiver au Québec</h4>
 
                         <p>
-                            Avant de venir étudier au Québec, je ne (<b title="connaissais">connaître</b>)
-                            <input type="text" pattern="connaissais">
-                            pas l’hiver.
+                            Avant de venir étudier au Québec, je
+                            (<b title="je ne connaissais pas">ne connaître pas</b>)
+                            <input type="text" pattern="je ne connaissais pas">
+                            l’hiver.
 
                             (<b title="J'étais">Je être</b>)
                             <input type="text" pattern="J|j'étais">
                             donc très content de faire cette nouvelle expérience.
 
-                            Je (<b title="suis arrivé">arriver</b>)
-                            <input type="text" pattern="suis arrivé">
+                            (<b title="Je suis arrivé">Je arriver</b>)
+                            <input type="text" pattern="J|je suis arrivé">
                             à Montréal au mois de décembre.
 
                             Il y (<b title="avait">avoir</b>)
@@ -123,72 +124,73 @@
 
                         <p>
                             La semaine dernière, mon amie Lucie et moi, nous (<b title="sommes allées">aller</b>)
-                            <input type="text" pattern="sommes allées">
+                            <input type="text" class="wide" pattern="sommes allées">
 
                             magasiner au centre commercial.
 
                             (<b title="C'était">Ce être</b>)
-                            <input type="text" pattern="C'était">
-
+                            <input type="text" pattern="C|c'était">
                             un jour de congé pour la plupart des gens et il y (<b title="avait">avoir</b>)
                             <input type="text" pattern="avait">
+                            beaucoup de monde dans les magasins.
 
-                            beaucoup de monde dans les magasins. Lucie (<b title="cherchait">chercher</b>)
+                            Lucie (<b title="cherchait">chercher</b>)
                             <input type="text" pattern="cherchait">
+                            une paire de souliers qui irait avec sa petite robe noire.
 
-                            une paire de souliers qui irait avec sa petite robe noire. Nous (<b
-                                title="avons fait">faire</b>)
+                            Nous (<b title="avons fait">faire</b>)
                             <input type="text" pattern="avons fait">
-
                             plusieurs boutiques, elle (<b title="a essayé">essayer</b>)
                             <input type="text" pattern="a essayé">
+                            de nombreuses paires de chaussures,
+                            mais aucune (<b title="ne faisait">ne faire</b>)
+                            <input type="text" pattern="ne faisait">
+                            l’affaire.
 
-                            de nombreuses paires de chaussures, mais aucune ne (<b title="faisait">faire</b>)
-                            <input type="text" pattern="faisait">
-
-                            l’affaire. Certaines (<b title="étaient">être</b>)
+                            Certaines (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
-
                             trop grandes, d’autres (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
-
                             trop petite, trop noires, pas assez noires, etc.
-                            Quatre heures plus tard, fatiguées, nous (<b title="avons décidé">décider</b>)
+
+                            Quatre heures plus tard, fatiguées,
+                            nous (<b title="avons décidé">décider</b>)
                             <input type="text" pattern="avons décidé">
-
-                            de nous reposer un peu et nous (<b title="avons pris">prendre</b>)
+                            de nous reposer un peu et nous
+                            (<b title="avons pris">prendre</b>)
                             <input type="text" pattern="avons pris">
+                            un repas à un petit café avant de recommencer le magasinage.
 
-                            un repas à un petit café avant de recommencer le magasinage. Nous (<b
-                                title="commencions">commencer</b>)
-                            <input type="text" pattern="commencions">
-
-                            réellement à penser que les souliers parfaits (<b title="n'existaient">ne exister</b>)
+                            Nous (<b title="commencions">commencer</b>)
+                            <input type="text" class="wide" pattern="commencions">
+                            réellement à penser que les souliers parfaits
+                            (<b title="n'existaient">ne exister</b>)
                             <input type="text" pattern="n'existaient">
+                            pas !
 
-                            pas ! Mais nous (<b title="avons repris">reprendre</b>)
+                            Mais nous (<b title="avons repris">reprendre</b>)
                             <input type="text" pattern="avons repris">
-
-                            la course des magasins et, tout à coup, dans le dernier magasin de chaussures du centre
-                            commercial dans lequel nous (<b title="sommes entrées">entrer</b>)
-                            <input type="text" pattern="sommes entrées">
-
+                            la course des magasins et, tout à coup,
+                            dans le dernier magasin de chaussures du centre
+                            commercial dans lequel nous
+                            (<b title="sommes entrées">entrer</b>)
+                            <input type="text" class="wide" pattern="sommes entrées">
                             , Lucie (<b title="a trouvé">trouver</b>)
                             <input type="text" pattern="a trouvé">
-
                             les petits souliers qui lui (<b title="plaisaient">plaire</b>)
                             <input type="text" pattern="plaisaient">
+                            .
 
-                            . Elle les (<b title="a achetés">acheter</b>)
+                            Elle les (<b title="a achetés">acheter</b>)
                             <input type="text" pattern="a achetés">
-
                             aussitôt et nous (<b title="sommes parties">partir</b>)
-                            <input type="text" pattern="sommes parties">
+                            <input type="text" class="wide" pattern="sommes parties">
+                            sans tarder, car l’heure de fermeture des magasins
+                            (<b title="approchait">approcher</b>)
+                            <input type="text" pattern="approchait">
+                            .
 
-                            sans tarder, car l’heure de fermeture des magasins (<b title="approchait">approcher</b>)
-                            <input type="text" pattern="ressemblait">
-
-                            . Quelle journée !
+                            Quelle journée !
                         </p>
                     </li>
 
@@ -201,27 +203,24 @@
                             Bonjour,
                             Je vous écris parce que je ne sais plus quoi faire et j’ai besoin de vos conseils.
 
-                            Il y a deux semaines, je (<b title="suis allé">aller</b>)
-                            <input type="text" pattern="suis allé">
+                            Il y a deux semaines, (<b title="je suis allé">je aller</b>)
+                            <input type="text" pattern="je suis allé">
 
                             au cinéma.
 
                             Presque tous les sièges de la salle (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
-
                             occupés, alors j’en (<b title="ai pris">prendre</b>)
                             <input type="text" pattern="ai pris">
-
                             un à l’arrière et je (<b title="me suis assis">s’asseoir</b>)
                             <input type="text" pattern="me suis assis">
                             .
 
                             Après quelques minutes, une jolie fille (<b title="est venue">venir</b>)
                             <input type="text" pattern="est venue">
-
-                            s’asseoir juste à côté de moi, mais je (<b title="ne lui ai pas parlé">ne pas lui
-                                parler</b>)
-                            <input type="text" pattern="ne lui ai pas parlé">
+                            s’asseoir juste à côté de moi, mais je
+                            (<b title="ne lui ai pas parlé">ne pas lui parler</b>)
+                            <input type="text" class="wide" pattern="ne lui ai pas parlé">
                             .
 
                             (<b title="J'étais">Je être</b>)
@@ -238,26 +237,26 @@
 
                             Aucune fois, elle (<b title="m'a regardé">me regarder</b>)
                             <input type="text" pattern="m'a regardé">
-
-                            et, à la fin de la représentation, elle (<b title="s'est levée">se lever</b>)
+                            et, à la fin de la représentation, elle
+                            (<b title="s'est levée">se lever</b>)
                             <input type="text" pattern="s'est levée">
                             et elle (<b title="est partie">partir</b>)
                             <input type="text" pattern="est partie">
                             sans dire un mot.
 
-                            Hier, je (<b title="suis retourné">retourner</b>)
-                            <input type="text" pattern="suis retourné">
+                            Hier, (<b title="je suis retourné">je retourner</b>)
+                            <input type="text" pattern="je suis retourné">
                             à ce même cinéma.
 
                             (<b title="J'espérais">Je espérer</b>)
                             <input type="text" pattern="J|j'espérais">
                             revoir cette fille.
 
-                            Je (<b title="voulais">vouloir</b>)
-                            <input type="text" pattern="voulais">
+                            (<b title="Je voulais">Je vouloir</b>)
+                            <input type="text" pattern="J|je voulais">
                             lui demander son nom et son numéro de téléphone,
                             mais je (<b title="ne l'ai pas aperçue">ne pas la apercevoir</b>)
-                            <input type="text" pattern="ne l'ai pas aperçue">
+                            <input type="text" class="wide" pattern="ne l'ai pas aperçue">
                             .
 
                             Pourtant, la salle (<b title="était">être</b>)
@@ -289,7 +288,7 @@
                             dans ma direction.
 
                             Nous (<b title="nous sommes regardés">se regarder</b>)
-                            <input type="text" pattern="nous sommes regardés">
+                            <input type="text" class="wide" pattern="nous sommes regardés">
                             , mais, encore cette fois, (<b title="j'ai été / j'étais">je être</b>)
                             <input type="text" pattern="j'ai été|j'étais">
                             trop timide et je (<b title="n'ai pas osé">ne pas oser</b>)
@@ -315,7 +314,7 @@
                             d’aller faire du ski.
 
                             Nous (<b title="sommes parties">partir</b>)
-                            <input type="text" pattern="sommes parties">
+                            <input type="text" class="wide" pattern="sommes parties">
                             très tôt un dimanche matin.
 
                             Mon amie Sophie nous (<b title="a conduites">conduire</b>)
@@ -330,19 +329,19 @@
 
                             D’abord, (<b title="j'ai chaussé">je chausser</b>)
                             <input type="text" pattern="j'ai chaussé">
-                            les skis et je (<b title="suis montée">monter</b>)
-                            <input type="text" pattern="suis montée">
+                            les skis et (<b title="je suis montée">je monter</b>)
+                            <input type="text" pattern="je suis montée">
                             dans le monte-pente.
 
-                            Comme je ne pas (<b title="pratiquais"></b>pratiquer
-                            <input type="text" pattern="pratiquais">
-                            cette activité très souvent, je (<b title="j'avais / j'ai eu">avoir</b>)
+                            Comme je (<b title="ne pas pratiquais">ne pas pratiquer</b>)
+                            <input type="text" pattern="ne pas pratiquais">
+                            cette activité très souvent, (<b title="j'avais / j'ai eu">je avoir</b>)
                             <input type="text" pattern="j'avais|j'ai eu">
                             un peu peur.
 
                             Mais un moniteur qui (<b title="était">être</b>)
                             <input type="text" pattern="était">
-                            là, me (<b title="m'a aidée">aider</b>)
+                            là, (<b title="m'a aidée">me aider</b>)
                             <input type="text" pattern="m'a aidée">
                             les premières minutes.
 
@@ -351,15 +350,17 @@
                             les consignes de base et les pentes qui
                             (<b title="étaient">être</b>)
                             <input type="text" pattern="étaient">
-                            les plus difficiles. La première descente
+                            les plus difficiles.
+
+                            La première descente
                             (<b title="s'est bien passée">se passer bien</b>)
-                            <input type="text" pattern="s'est bien passée">
+                            <input type="text" class="wide" pattern="s'est bien passée">
                             parce que (<b title="je prenais / j'ai pris">je prendre</b>)
                             <input type="text" pattern="prenais|j'ai pris">
                             mon temps.
 
                             Après quelques descentes, je (<b title="me suis sentie">se sentir</b>)
-                            <input type="text" pattern="me suis sentie">
+                            <input type="text" class="wide" pattern="me suis sentie">
                             fatiguée et (<b title="j'ai décidé">je décider</b>)
                             <input type="text" pattern="j'ai décidé">
                             de me rendre au chalet pour boire un chocolat chaud.
@@ -380,23 +381,23 @@
 
                             Quand (<b title="j'ai fini">je finir</b>)
                             <input type="text" pattern="j'ai fini">
-                            de me reposer, je (<b title="suis retournée">retourner</b>)
-                            <input type="text" pattern="suis retournée">
+                            de me reposer, (<b title="je suis retournée">je retourner</b>)
+                            <input type="text" class="wide" pattern="je suis retournée">
                             faire quelques autres descentes.
 
                             Déjà, la fin de l’après-midi (<b title="approchait">approcher</b>)
                             <input type="text" pattern="approchait">
                             et mes amies (<b title="m'ont dit">me dire</b>)
                             <input type="text" pattern="m'ont dit">
-                            qu’il (<b title="était"></b>être
+                            qu’il (<b title="était">être</b>)
                             <input type="text" pattern="était">
                             temps de revenir à la maison.
 
                             Nous (<b title="avons donc enlevé">enlever donc</b>)
-                            <input type="text" pattern="avons donc enlevé">
+                            <input type="text" class="wide" pattern="avons donc enlevé">
                             nos skis, nous (<b title="sommes montées">monter</b>)
-                            <input type="text" pattern="sommes montées">
-                            dans la voiture et Sophie n'ous
+                            <input type="text" class="wide" pattern="sommes montées">
+                            dans la voiture et Sophie nous
                             (<b title="a reconduites">reconduire</b>)
                             <input type="text" pattern="a reconduites">
                             chacune chez soi.
@@ -406,7 +407,7 @@
                             une très belle journée et j’espère qu’on y retournera bientôt.
                         </p>
                     </li>
-
+                </ol>
             </section>
 
         </article>
